--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Food recipes</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Cookie|Lato:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/d769e5e148.js" crossorigin="anonymous"></script>
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
 </head>
+
 <body>
-    <header class="header"></header>
+    <header class="header">
+        <h1 class="header__logo-text">
+            Delicious recipes
+        </h1>
+        <div class="search-icon"><i class="fas fa-search"></i></div>
+    </header>
     <main></main>
     <footer class="footer"></footer>
 </body>
