filters__protein section added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
         </h1>
         <div class="search-icon"><i class="fas fa-search"></i></div>
     </header>
-    <main></main>
+    <main>
+        <section class="filters">
+            <div class="filters__protein">
+                <div class="category category--chicken">
+                    <i class="fas fa-drumstick-bite"></i>
+                </div>
+                <div class="category category--meat">
+                    <i class="fas fa-hamburger"></i>
+                </div>
+                <div class="category category--fish">
+                    <i class="fas fa-fish"></i>
+                </div>
+                <div class="category category--egg">
+                    <i class="fas fa-egg"></i>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer"></footer>
 </body>
 </html>
