--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="search-icon"><i class="fas fa-search"></i></div>
     </header>
     <main>
-        <section class="filters">
+        <section class="section-filters">
             <div class="filters__protein">
                 <div class="category category--chicken">
                     <i class="fas fa-drumstick-bite"></i>
