filters classnames fix

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     </header>
     <main>
         <section class="section-filters">
-            <div class="filters__protein">
-                <div class="category category--chicken">
+            <div class="filter filter-protein">
+                <div class="filter__category filter__category--chicken">
                     <i class="fas fa-drumstick-bite"></i>
                 </div>
-                <div class="category category--meat">
+                <div class="filter__category filter__category--meat">
                     <i class="fas fa-hamburger"></i>
                 </div>
-                <div class="category category--fish">
+                <div class="filter__category filter__category--fish">
                     <i class="fas fa-fish"></i>
                 </div>
-                <div class="category category--egg">
+                <div class="filter__category filter__category--egg">
                     <i class="fas fa-egg"></i>
                 </div>
             </div>
