--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <main>
         <section class="section-filters">
             <div class="filter filter-protein">
+                <h2 class="heading-filters">
+                    Filter by protein
+                </h2>
                 <div class="filter__category filter__category--chicken">
                     <i class="fas fa-drumstick-bite"></i>
                 </div>
