implemented grid for filter-section

--- a/index.html
+++ b/index.html
@@ -22,21 +22,33 @@
     </header>
     <main>
         <section class="section-filters">
-            <div class="filter filter-protein">
+            <div class="row">
                 <h2 class="heading-filters">
                     Filter by protein
                 </h2>
-                <div class="filter__category filter__category--chicken">
-                    <i class="fas fa-drumstick-bite"></i>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-drumstick-bite"></i>
+                    </div>
+                    <h3 class="filter-name">Chicken</h3>
                 </div>
-                <div class="filter__category filter__category--meat">
-                    <i class="fas fa-hamburger"></i>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-hamburger"></i>
+                    </div>
+                    <h3 class="filter-name">Meat</h3>
                 </div>
-                <div class="filter__category filter__category--fish">
-                    <i class="fas fa-fish"></i>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-fish"></i>
+                    </div>
+                    <h3 class="filter-name">Fish</h3>
                 </div>
-                <div class="filter__category filter__category--egg">
-                    <i class="fas fa-egg"></i>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-egg"></i>
+                    </div>
+                    <h3 class="filter-name">Egg</h3>
                 </div>
             </div>
         </section>
