added filter by type

--- a/index.html
+++ b/index.html
@@ -24,6 +24,36 @@
         <section class="section-filters">
             <div class="row">
                 <h2 class="heading-filters">
+                    Filter by type
+                </h2>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-cheese"></i>
+                    </div>
+                    <h3 class="filter-name">Appetizer</h3>
+                </div>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-utensils"></i>
+                    </div>
+                    <h3 class="filter-name">Dinner</h3>
+                </div>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-ice-cream"></i>
+                    </div>
+                    <h3 class="filter-name">Dessert</h3>
+                </div>
+                <div class="col-1-of-4 filter-box">
+                    <div class="icon">
+                        <i class="fas fa-cookie-bite"></i>
+                    </div>
+                    <h3 class="filter-name">Pastry</h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <h2 class="heading-filters">
                     Filter by protein
                 </h2>
                 <div class="col-1-of-4 filter-box">
