--- a/index.html
+++ b/index.html
@@ -21,40 +21,48 @@
         <div class="search-icon"><i class="fas fa-search"></i></div>
     </header>
     <main>
-        <section class="featured-section">
+        <section class="section-featured">
             <div class="row">
                 <h2 class="heading-secondary">Featured recipes</h2>
                 <div class="col-1-of-4 recipe">
-                    <img src="" alt="Spaghetti bolognese" class="recipe__image">
-                    <h4 class="recipe__name">Spaghetti bolognese</h4>
-                    <p class="recipe__features">
-                        <span class="recipe__features--time">20-40 min</span>
-                        <span class="recipe__features--difficulty">Easy</span>
-                    </p>
+                    <img src="images/lasagna.jpg" alt="Spaghetti bolognese" class="recipe__image">
+                    <div class="recipe__text">
+                        <h4 class="recipe__name">Spaghetti bolognese</h4>
+                        <p class="recipe__features">
+                            <span class="recipe__features--time">20-40 min</span>
+                            <span class="recipe__features--difficulty">Easy</span>
+                        </p>
+                    </div>
                 </div>
                 <div class="col-1-of-4 recipe">
-                    <img src="" alt="Classic shrimp scampi" class="recipe__image">
-                    <h4 class="recipe__name">Classic shrimp scampi</h4>
-                    <p class="recipe__features">
-                        <span class="recipe__features--time">Less than 20 min</span>
-                        <span class="recipe__features--difficulty">Easy</span>
-                    </p>
+                    <img src="images/scampi.jpg" alt="Classic shrimp scampi" class="recipe__image">
+                    <div class="recipe__text">
+                        <h4 class="recipe__name">Shrimp scampi</h4>
+                        <p class="recipe__features">
+                            <span class="recipe__features--time">Less than 20 min</span>
+                            <span class="recipe__features--difficulty">Easy</span>
+                        </p>
+                    </div>
                 </div>
                 <div class="col-1-of-4 recipe">
-                    <img src="" alt="Fish tacos" class="recipe__image">
-                    <h4 class="recipe__name">Fish tacos</h4>
-                    <p class="recipe__features">
-                        <span class="recipe__features--time">20-40 min</span>
-                        <span class="recipe__features--difficulty">Easy</span>
-                    </p>
+                    <img src="images/fish tacos.jpg" alt="Fish tacos" class="recipe__image">
+                    <div class="recipe__text">
+                        <h4 class="recipe__name">Fish tacos</h4>
+                        <p class="recipe__features">
+                            <span class="recipe__features--time">20-40 min</span>
+                            <span class="recipe__features--difficulty">Easy</span>
+                        </p>
+                    </div>
                 </div>
                 <div class="col-1-of-4 recipe">
-                    <img src="" alt="Cheese cake" class="recipe__image">
-                    <h4 class="recipe__name">Cheese cake</h4>
-                    <p class="recipe__features">
-                        <span class="recipe__features--time">Over 60 min</span>
-                        <span class="recipe__features--difficulty">Medium</span>
-                    </p>
+                    <img src="images/cheesecake.jpg" alt="Cheese cake" class="recipe__image">
+                    <div class="recipe__text">
+                        <h4 class="recipe__name">Cheese cake</h4>
+                        <p class="recipe__features">
+                            <span class="recipe__features--time">Over 60 min</span>
+                            <span class="recipe__features--difficulty">Medium</span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
